attempts to fix background and x-scrolling on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,5 @@
 html{
     width: 100%;
-    overflow-x: hidden;
 }
 
 body{
@@ -35,8 +34,11 @@ header {
 }
 
 @media screen and (max-width:767px){
-    .html{
+    html{
         width:100vw;
+    }
+    header {
+        background: url('../img/background_2.png') no-repeat center center cover;
     }
     .logo{
         width:100%;
@@ -44,15 +46,7 @@ header {
         padding-right: 0x;
         padding-left : 0px;
         padding-bottom: 0px;
-    }
-    .container
-    {
-        overflow: hidden;
-        width: 100%;
-    }
-    .body{
-    overflow: hidden;
-    width: 100%;
+        background: url('../img/background_2.png') no-repeat center center fixed;
     }
 }
 #nav-logo{
